--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -224,7 +224,7 @@ span:hover {
 }
 
 .main-color {
-  color: #c5a47e !important;
+  color: #AA5656 !important;
 }
 
 .bg-gray {
@@ -2486,7 +2486,7 @@ body {
 }
 
 .about .img .feat .item h5 {
-  color: #c5a47e;
+  color: #item;
 }
 
 .about .img .feat .item h6 {
