--- a/public/assets/css/style-light.css
+++ b/public/assets/css/style-light.css
@@ -1045,9 +1045,9 @@ span:hover {
 
 /* ====================== [ End Text Animation & Images ] ====================== */
 /* ====================== [ Start Cursor Style ] ====================== */
-body {
+/* body {
   cursor: none;
-}
+} */
 
 .mouse-cursor {
   position: fixed;
