--- a/public/assets/css/style-light.css
+++ b/public/assets/css/style-light.css
@@ -3123,25 +3123,13 @@ span:hover {
   margin-top: 45px;
 }
 
-.skills-circle .skill span {
-  width: 150px;
-  height: 150px;
-  line-height: 150px;
+.skills-circle .skill-icon {
+  width: 100px;
+  height: 100px;
   border-radius: 50%;
   background: rgba(255, 255, 255, 0.1);
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translateX(-75px) translateY(-98px);
-  -ms-transform: translateX(-75px) translateY(-98px);
-  transform: translateX(-75px) translateY(-98px);
-  font-size: 28px;
-  font-weight: 200;
-}
-
-.skills-circle .skill svg {
-  position: relative;
-  top: -22px;
+  padding: 20px;
+  margin: 0 auto;
 }
 
 .skills-circle h5 {
@@ -3150,121 +3138,9 @@ span:hover {
   text-transform: uppercase;
   letter-spacing: 2px;
   margin-top: 20px;
-}
-
-.skills-sec .skill-item {
-  margin-bottom: 50px;
-}
-
-.skills-sec .skill-item:last-of-type {
-  margin-bottom: 0;
-}
-
-.skills-sec h6 {
-  font-size: 13px;
-  font-weight: 300;
-  font-style: italic;
-  text-transform: uppercase;
-  letter-spacing: 2px;
-  margin-bottom: 10px;
-}
-
-.skills-sec .skill-progress {
-  height: 7px;
-  background-color: #f7f7f7;
-  position: relative;
-}
-
-.skills-sec .skill-progress .progres {
-  position: absolute;
-  height: 100%;
-  width: 0;
-  top: 0;
-  left: 0;
-  background-color: #333;
-  -webkit-transition: all 1.5s;
-  -o-transition: all 1.5s;
-  transition: all 1.5s;
-}
-
-.skills-sec .skill-progress .progres:after {
-  content: attr(data-value);
-  position: absolute;
-  right: 10px;
-  top: -30px;
-  font-size: 20px;
-  font-weight: 100;
-}
-
-.skills-sec .skill-progress .progres:before {
-  content: '';
-  width: 1px;
-  height: 30px;
-  background: #333;
-  position: absolute;
-  right: 0;
-  bottom: 0;
-}
-
-.play-button {
-  position: relative;
-  width: 85px;
-  height: 85px;
-  margin: auto;
-  -webkit-transform: scale(1.3);
-  -ms-transform: scale(1.3);
-  transform: scale(1.3);
-  z-index: 4;
-}
-
-.play-button svg {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-}
-
-.circle-fill circle {
-  opacity: 1;
-  fill: rgba(255, 255, 255, 0.1);
-}
-
-.polygon {
-  position: absolute;
-  width: 100%;
-  height: 100%;
   text-align: center;
-  line-height: 90px;
-  font-size: 35px;
-  z-index: 2;
 }
 
-.play-button svg.circle-fill {
-  z-index: 1;
-  stroke-dasharray: 322;
-  stroke-dashoffset: 322;
-  -webkit-transition: all 0.5s;
-  -o-transition: all 0.5s;
-  transition: all 0.5s;
-  -webkit-transform: rotate(-90deg);
-  -ms-transform: rotate(-90deg);
-  transform: rotate(-90deg);
-}
-
-.play-button:hover svg.circle-fill {
-  stroke-dashoffset: 38.5;
-}
-
-.play-button svg.circle-track {
-  z-index: 0;
-}
-
-.play-button.color {
-  color: #b19777;
-}
-
-.play-button.color .circle-fill circle {
-  fill: rgba(177, 151, 119, 0.2);
-}
 
 /* ====================== [ End progress bar ] ====================== */
 /* ====================== [ Start tabs before & after section ] ====================== */
