--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -3414,23 +3414,37 @@ span:hover {
 
 /* ====================== [ End services ] ====================== */
 /* ====================== [ Start progress bar ] ====================== */
-.skills-circle {
+.skills-circle .skill {
   position: relative;
+  margin-top: 15px;
 }
 
-.skills-circle:before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-image: url(/assets/img/dots.png);
-  background-repeat: repeat;
-  opacity: .15;
-  z-index: -1;
+.skills-circle .skill-icon {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  background: rgba(255, 255, 255, 0.1);
+  padding: 20px;
+  margin: 0 auto;
 }
 
+.skills-circle h5 {
+  font-size: 14px;
+  font-weight: 400;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  margin-top: 20px;
+  text-align: center;
+}
+
+.skills-circle p {
+  font-size: 12px;
+  font-weight: 300;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  margin-top: 10px;
+  text-align: center;
+}
 
 /* ====================== [ End progress bar ] ====================== */
 /* ====================== [ Start Call To Action  ] ====================== */
